--- a/package.json
+++ b/package.json
@@ -5,9 +5,18 @@
   "main": "site.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node ./scripts/build"
+    "build": "node ./scripts/build",
+    "serve": "serve ./public"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "ejs": "^3.1.6",
+    "fs-extra": "^10.0.0",
+    "glob": "^7.2.0"
+  },
+  "devDependencies": {
+    "serve": "^13.0.2"
+  }
 }
