--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "site.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "build": "node ./scripts/build",
     "serve": "serve ./public"
   },
@@ -17,6 +17,7 @@
     "glob": "^7.2.0"
   },
   "devDependencies": {
+    "mocha": "^9.1.3",
     "serve": "^13.0.2"
   }
 }
