--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "mocha",
     "build": "node ./scripts/build",
-    "serve": "serve ./public"
+    "serve": "serve ./public",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
   "dependencies": {
     "dotenv-safe": "^8.2.0",
     "ejs": "^3.1.6",
+    "express": "^4.17.1",
     "fs-extra": "^10.0.0",
     "glob": "^7.2.0"
   },
