--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha",
     "build": "node ./scripts/build",
     "serve": "serve ./public",
-    "start": "node app.js"
+    "start": "start http://localhost:3000 && node app.js"
   },
   "keywords": [],
   "author": "",
